Solve horizontal scrollbar coming around 750px to 990px

--- a/app/styles/create.css
+++ b/app/styles/create.css
@@ -9,6 +9,7 @@
     justify-content: center;
     box-sizing: border-box;
     position: relative;
+    overflow-x: hidden;
 }
 
 /* Override search container width specifically for create page */
@@ -361,6 +362,9 @@
     text-align: left;
     margin-left: 30px;
     margin-bottom: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .bold, .typed-cursor {
     color: var(--theme-color);
@@ -375,10 +379,13 @@
 @media screen and (max-width: 800px) {
     .create-search-heading {
         font-size: 46px;
+        margin-left: 20px;
     }
     .create-search-container {
-        max-width: 780px;
+        width: 100%;
+        max-width: 100%;
         padding: 32px 15px;
+        overflow-x: hidden;
     }
     .create-search-container .search-container {
         max-width: 780px;
@@ -394,9 +401,7 @@
 @media screen and (max-width: 760px) {
     .create-search-heading {
         font-size: 44px;
-        margin: 0;
-        margin-left: 20px;
-        margin-bottom: 20px;
+        margin: 0 0 20px 15px;
     }
     .create-search-container {
         max-width: 700px;
